--- a/WpfBuzzN/Team.xaml
+++ b/WpfBuzzN/Team.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfBuzzN"
+             xmlns:local="clr-namespace:WpfBuzzN" xmlns:viewmodels="clr-namespace:WpfBuzzN.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:TeamViewModel}"
              mc:Ignorable="d" d:DesignWidth="201" d:DesignHeight="131" Foreground="{x:Null}">
     <Border BorderBrush="#FF992828">
         <Grid Margin="10,10,10,10">
@@ -11,11 +11,15 @@
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="1*"/>
+                <RowDefinition Height="auto"/>
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
-            <TextBox Grid.Column="0" Grid.Row="0" x:Name="TeamNameTextBox" HorizontalAlignment="Stretch" Text="{Binding Path=TeamName}" TextWrapping="Wrap" VerticalAlignment="Top" BorderThickness="0,0,5,0" Background="{x:Null}" FontFamily="Kristen ITC" FontSize="20" FontWeight="Normal" Foreground="White" MouseDown="TeamNameTextBox_MouseDown" TextAlignment="Center"/>
-            <TextBox Grid.Column="0" Grid.Row="1" x:Name="PlayerNameTextBox" HorizontalAlignment="Stretch" Text="{Binding Path=PlayerName}" TextWrapping="Wrap" VerticalAlignment="Top" BorderThickness="0,0,5,0" Background="{x:Null}" FontFamily="Kristen ITC" FontSize="20" FontWeight="Normal" Foreground="White" MouseDown="TeamNameTextBox_MouseDown" TextAlignment="Center"/>
+            <TextBox Grid.Column="0" Grid.Row="0" x:Name="TeamNameTextBox" HorizontalAlignment="Stretch" Text="{Binding TeamName}" TextWrapping="Wrap" VerticalAlignment="Top" BorderThickness="0,0,5,0" Background="#FFC12F2F" FontFamily="Kristen ITC" FontSize="20" FontWeight="Normal" Foreground="White" MouseDown="TeamNameTextBox_MouseDown" TextAlignment="Center" BorderBrush="{x:Null}"/>
+            <DataGrid ItemsSource="{Binding Players}" Grid.Column="0" Grid.Row="1">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Binding="{Binding Name}"/>
+                </DataGrid.Columns>
+            </DataGrid>
         </Grid>
     </Border>
 </UserControl>
