incremental work....need to delete viewmodels for each control...that was wrong.  One viewmodel per page (view) would be a better approach (I think)

--- a/WpfBuzzN/MainWindow.xaml
+++ b/WpfBuzzN/MainWindow.xaml
@@ -11,7 +11,7 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <TextBox Grid.Row="0" Text="Game"></TextBox>
